[project]
name = "pubsub-knife"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Segato",email = "brunosegatoit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "google-cloud-pubsub (>=2.31.0,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "pubsub_knife", from = "src" }]

[tool.poetry.scripts]
pubsub-knife = "pubsub_knife.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
